--- a/css/common.css
+++ b/css/common.css
@@ -12,3 +12,20 @@ body {
   color: #212121;
   line-height: 1.5;
 }
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.list-item {
+  list-style-type: none;
+  width: calc((100% - 20px) / 3);
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
