--- a/css/common.css
+++ b/css/common.css
@@ -29,3 +29,25 @@ img {
   width: 100%;
   height: 100%;
 }
+
+.widget {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 345px;
+  height: 280px;
+}
+
+
+.change-color {
+  width: 148px;
+  height: 40px;
+  border-radius: 8px;
+  background-color: #4E75FF;
+  border: none;
+  font-size: 16px;
+  font-weight: bold;
+  color: #FFFFFF;
+}
+
